removed archived videos and hide about

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="mt-3 text-lg text-[#d9a441]">Classical Guitarist • SFCM Pre‑College</p>
         <div class="mt-6 flex flex-wrap gap-3">
           <a href="#performances" class="rounded-full bg-white/10 px-5 py-2 text-white hover:bg-white/20">Watch Performances</a>
-          <a href="#about" class="rounded-full bg-[#d9a441] text-[#0c1f3f] px-5 py-2 hover:opacity-90">About</a>
+	  <!-- <a href="#about" class="rounded-full bg-[#d9a441] text-[#0c1f3f] px-5 py-2 hover:opacity-90">About</a> -->
         </div>
       </div>
     </section>
@@ -66,6 +66,7 @@
     </section>
 
     <!-- About -->
+    <!--
     <section id="about" class="max-w-6xl mx-auto px-4 py-16">
       <div class="grid md:grid-cols-5 gap-8 items-start">
         <div class="md:col-span-2">
@@ -79,6 +80,7 @@
         </div>
       </div>
     </section>
+    -->
 
     <!-- Performances -->
     <section id="performances" class="bg-white py-16">
@@ -88,6 +90,80 @@
 
         <!-- Featured -->
         <div class="mt-8 grid md:grid-cols-2 gap-8">
+
+          <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
+            <div class="relative aspect-video bg-black">
+              <button class="group w-full h-full" onclick="play('_fCkcskvaKw', this)" aria-label="Play Tárrega: Capricho Árabe">
+                <img src="https://i.ytimg.com/vi/_fCkcskvaKw/hqdefault.jpg" alt="Capricho Árabe thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
+                <div class="absolute inset-0 grid place-items-center">
+                  <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
+                </div>
+              </button>
+            </div>
+            <div class="p-4">
+              <h3 class="font-medium text-slate-900">Tárrega: Capricho Árabe</h3>
+              <p class="text-sm text-slate-600">Competition Performance • 2023</p>
+	      <!-- <p class="mt-2 text-sm text-slate-700">Highlights lyrical tremolo, rubato, and dynamic shaping across contrasting sections.</p> -->
+            </div>
+          </article>
+
+            <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
+              <div class="relative aspect-video bg-black">
+                <button class="group w-full h-full" onclick="play('v-rGx26U-M4', this)" aria-label="Play Ravel: Pavane Pour Une Infante Defunté">
+                  <img src="https://i.ytimg.com/vi/v-rGx26U-M4/hqdefault.jpg" alt="Ravel: Pavane Pour Une Infante Defunté thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
+                  <div class="absolute inset-0 grid place-items-center">
+                    <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
+                  </div>
+                </button>
+              </div>
+              <div class="p-4">
+ 
+                <h3 class="font-medium text-slate-900">Ravel: Pavane Pour Une Infante Defunté</h3>
+		<!-- <p class="text-sm text-slate-600">2023</p> -->
+		<!-- <p class="mt-2 text-sm text-slate-700">Idiomatic chord voicings and cantabile melody over accompaniment.</p> -->
+              </div>
+            </article>
+
+            <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
+              <div class="relative aspect-video bg-black">
+                <button class="group w-full h-full" onclick="play('znNuD4Kccf0', this)" aria-label="Play York: Pacific Coast Highway">
+                  <img src="https://i.ytimg.com/vi/znNuD4Kccf0/hqdefault.jpg" alt="York: Pacific Coast Highway thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
+                  <div class="absolute inset-0 grid place-items-center">
+                    <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
+                  </div>
+                </button>
+              </div>
+              <div class="p-4">
+                <h3 class="font-medium text-slate-900">York: Pacific Coast Highway</h3>
+                <!-- <p class="text-sm text-slate-600">2022</p>
+		<p class="mt-2 text-sm text-slate-700">Tonal colors and phrasing in a Catalan folk arrangement.</p> -->
+              </div>
+            </article>
+
+            <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
+              <div class="relative aspect-video bg-black">
+                <button class="group w-full h-full" onclick="play('XCnsPwbxw6w', this)" aria-label="Play Houghton: Acoustic Counterpoint">
+                  <img src="https://i.ytimg.com/vi/XCnsPwbxw6w/hqdefault.jpg" alt="Houghton: Acoustic Counterpoint thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
+                  <div class="absolute inset-0 grid place-items-center">
+                    <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
+                  </div>
+                </button>
+              </div>
+              <div class="p-4">
+                <h3 class="font-medium text-slate-900">Houghton: Acoustic Counterpoint</h3>
+                <p class="text-sm text-slate-600">2019</p>
+                <p class="mt-2 text-sm text-slate-700">Classical‑era articulation and balance between melody and bass.</p>
+              </div>
+            </article>
+
+        </div>
+
+        <!-- Archive -->
+	<!--
+        <div class="mt-12">
+          <h3 class="text-lg font-serif text-[#0c1f3f]">Archive Recordings</h3>
+          <div class="mt-4 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            
           <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
             <div class="relative aspect-video bg-black">
               <button class="group w-full h-full" onclick="play('xiV-Bv2K0pU', this)" aria-label="Play Bach: Prelude BWV 999">
@@ -104,58 +180,6 @@
             </div>
           </article>
 
-          <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
-            <div class="relative aspect-video bg-black">
-              <button class="group w-full h-full" onclick="play('_fCkcskvaKw', this)" aria-label="Play Tárrega: Capricho Árabe">
-                <img src="https://i.ytimg.com/vi/_fCkcskvaKw/hqdefault.jpg" alt="Capricho Árabe thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
-                <div class="absolute inset-0 grid place-items-center">
-                  <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
-                </div>
-              </button>
-            </div>
-            <div class="p-4">
-              <h3 class="font-medium text-slate-900">Tárrega: Capricho Árabe</h3>
-              <p class="text-sm text-slate-600">Competition Performance • 2023</p>
-              <p class="mt-2 text-sm text-slate-700">Highlights lyrical tremolo, rubato, and dynamic shaping across contrasting sections.</p>
-            </div>
-          </article>
-        </div>
-
-        <!-- Archive -->
-        <div class="mt-12">
-          <h3 class="text-lg font-serif text-[#0c1f3f]">Archive Recordings</h3>
-          <div class="mt-4 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            
-            <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
-              <div class="relative aspect-video bg-black">
-                <button class="group w-full h-full" onclick="play('v-rGx26U-M4', this)" aria-label="Play Villa‑Lobos: Prelude No. 1">
-                  <img src="https://i.ytimg.com/vi/v-rGx26U-M4/hqdefault.jpg" alt="Villa‑Lobos: Prelude No. 1 thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
-                  <div class="absolute inset-0 grid place-items-center">
-                    <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
-                  </div>
-                </button>
-              </div>
-              <div class="p-4">
-                <h3 class="font-medium text-slate-900">Villa‑Lobos: Prelude No. 1</h3>
-                <p class="text-sm text-slate-600">2023</p>
-                <p class="mt-2 text-sm text-slate-700">Idiomatic chord voicings and cantabile melody over accompaniment.</p>
-              </div>
-            </article>
-            <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
-              <div class="relative aspect-video bg-black">
-                <button class="group w-full h-full" onclick="play('znNuD4Kccf0', this)" aria-label="Play Llobet: El Noi de la Mare">
-                  <img src="https://i.ytimg.com/vi/znNuD4Kccf0/hqdefault.jpg" alt="Llobet: El Noi de la Mare thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
-                  <div class="absolute inset-0 grid place-items-center">
-                    <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
-                  </div>
-                </button>
-              </div>
-              <div class="p-4">
-                <h3 class="font-medium text-slate-900">Llobet: El Noi de la Mare</h3>
-                <p class="text-sm text-slate-600">2022</p>
-                <p class="mt-2 text-sm text-slate-700">Tonal colors and phrasing in a Catalan folk arrangement.</p>
-              </div>
-            </article>
             <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
               <div class="relative aspect-video bg-black">
                 <button class="group w-full h-full" onclick="play('dnhTnXbIkpU', this)" aria-label="Play Albéniz: Asturias">
@@ -186,23 +210,9 @@
                 <p class="mt-2 text-sm text-slate-700">Modern harmonies; right‑hand pattern consistency and dynamic contrasts.</p>
               </div>
             </article>
-            <article class="rounded-2xl overflow-hidden border bg-[#f9f8f5]">
-              <div class="relative aspect-video bg-black">
-                <button class="group w-full h-full" onclick="play('XCnsPwbxw6w', this)" aria-label="Play Carulli: Andantino">
-                  <img src="https://i.ytimg.com/vi/XCnsPwbxw6w/hqdefault.jpg" alt="Carulli: Andantino thumbnail" class="w-full h-full object-cover opacity-90 group-hover:opacity-100"/>
-                  <div class="absolute inset-0 grid place-items-center">
-                    <div class="rounded-full bg-white/90 px-4 py-2 text-[#0c1f3f] font-medium shadow">▶ Play</div>
-                  </div>
-                </button>
-              </div>
-              <div class="p-4">
-                <h3 class="font-medium text-slate-900">Carulli: Andantino</h3>
-                <p class="text-sm text-slate-600">2019</p>
-                <p class="mt-2 text-sm text-slate-700">Classical‑era articulation and balance between melody and bass.</p>
-              </div>
-            </article>
           </div>
         </div>
+	-->
       </div>
     </section>
 
@@ -228,12 +238,12 @@
       <div class="max-w-6xl mx-auto px-4">
         <h2 class="text-2xl font-serif text-[#0c1f3f]">Gallery</h2>
         <div class="mt-6 grid grid-cols-2 md:grid-cols-3 gap-4">
-          <figure class="overflow-hidden rounded-2xl"><img src="https://images.unsplash.com/photo-1511379938547-c1f69419868d?q=80&w=1200&auto=format&fit=crop" alt="Performance close‑up" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500"/></figure>
-          <figure class="overflow-hidden rounded-2xl"><img src="https://images.unsplash.com/photo-1510915361894-db8b60106cb1?q=80&w=1200&auto=format&fit=crop" alt="Stage shot" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500"/></figure>
-          <figure class="overflow-hidden rounded-2xl"><img src="https://images.unsplash.com/photo-1460036521480-ff49c08c2781?q=80&w=1200&auto=format&fit=crop" alt="Guitar detail" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500"/></figure>
-          <figure class="overflow-hidden rounded-2xl"><img src="https://images.unsplash.com/photo-1483412033650-1015ddeb83d1?q=80&w=1200&auto=format&fit=crop" alt="Rehearsal" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500"/></figure>
-          <figure class="overflow-hidden rounded-2xl"><img src="https://images.unsplash.com/photo-1520523839897-bf2eebf71a14?q=80&w=1200&auto=format&fit=crop" alt="Audience" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500"/></figure>
-          <figure class="overflow-hidden rounded-2xl"><img src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?q=80&w=1200&auto=format&fit=crop" alt="Recital hall" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500"/></figure>
+          <figure class="overflow-hidden rounded-2xl">
+              <img src="Aanya-Playing-Church.png" alt="Aanya performing in church" class="w-full h-auto object-contain rounded-2xl shadow bg-black"/>
+	  </figure>
+          <figure class="overflow-hidden rounded-2xl">
+              <img src="Aanya-yellow-room.png" alt="Aanya Practicing" class="w-full h-auto object-contain rounded-2xl shadow bg-black"/>
+	  </figure>
         </div>
       </div>
     </section>
