Add photo of guitar collection

--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
           <figure class="overflow-hidden rounded-2xl">
               <img src="Aanya-yellow-room.png" alt="Aanya Practicing" class="w-full h-auto object-contain rounded-2xl shadow bg-black"/>
 	  </figure>
+          <figure class="overflow-hidden rounded-2xl">
+              <img src="Aanya-Guitar-Collection.jpg" alt="Aanya Guitar Collection" class="w-full h-auto object-contain rounded-2xl shadow bg-black"/>
+	  </figure>
         </div>
       </div>
     </section>
