--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
               </div>
               <div class="p-4">
                 <h3 class="font-medium text-slate-900">Houghton: Acoustic Counterpoint</h3>
-                <p class="text-sm text-slate-600">2019</p>
-                <p class="mt-2 text-sm text-slate-700">Classical‑era articulation and balance between melody and bass.</p>
+                !-- <p class="text-sm text-slate-600">2019</p>
+		<p class="mt-2 text-sm text-slate-700">Classical‑era articulation and balance between melody and bass.</p> -->
               </div>
             </article>
 
